--- a/gymManager/public/styles.css
+++ b/gymManager/public/styles.css
@@ -140,3 +140,54 @@ header{
     text-transform: uppercase;
     font-size: 12px;
 }
+
+/*===FORM===*/
+.card-form {
+    background-color: var(--secondary-color);
+    width: 800px;
+    min-height: 400px;
+    margin: 90px auto;
+    border-radius: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    box-shadow: 0px 4px 6px -2px rgba(0, 0, 0, 0.8);
+    animation: up 300ms ease-out;
+}
+.card-form:hover{
+    border: solid 2px var(--orange-light);
+    transition: width 300ms ease-in-out;
+}
+input{
+    width: 100%;
+    height: 25px;
+    outline: none;
+    background: var(--tertiary-color);
+    color: white;
+    border-radius: 5px;
+    font-size: 16px;
+}
+input[type="radio"]{
+    width: initial;
+    height: initial;
+    margin-right: 4px;
+}
+input::placeholder{
+    font-size: 16px;
+    font-weight: normal;
+    color: var(--primary-color);
+    padding-left: 5px;
+}
+input[type="date"]{
+    color: var(--primary-color);
+    padding-left: 5px;
+}
+button[type="submit"]{
+    padding: 8px 32px;
+    background-color: var(--orange-light);
+    border-radius: 6px;
+    font-size: 16px;
+    font-weight: bold;
+    margin-top: 32px;
+    width: 100%;
+    color: var(--secondary-color);
+}
