--- a/gymManager/views/layout.njk
+++ b/gymManager/views/layout.njk
@@ -19,7 +19,7 @@
 
         <div class="links">        
             <a href="/" class="active">Instructors</a>
-            <img src="./assets/gymLogo.png" alt="logo">
+            <img src="../assets/gymLogo.png" alt="logo">
             <a href="/members">Members</a>
         </div>
 
