--- a/codeSCool/desafio4-3/public/styles.css
+++ b/codeSCool/desafio4-3/public/styles.css
@@ -47,14 +47,6 @@ header{
     font-weight: bold;
     color: var(--color-active);
 }
-/*Ficar ligada qdo JS*/
-/* .links a + a.active{
-    font-weight: bold;
-    color: var(--color-four);
-} */
-/* .links a:hover{
-    text-decoration: underline;
-} */
 .links a::after{
     content: "";
     width: 0;
@@ -135,4 +127,64 @@ header{
     font-weight: bold;
     text-transform: uppercase;
     font-size: 12px;
+}
+
+/*===FORM===*/
+.card-form{
+    background-color: var(--color-dark-header);
+    width: 800px;
+    min-height: 400px;
+    margin: 40px auto;
+    border-radius: 20px;
+    display: grid;
+    grid-template-columns: 40% 60%;
+    box-shadow: 0px 4px 6px -2px rgba(0, 0, 0, 0.8);
+    animation: up 300ms ease-out;
+}
+.card-form:hover{
+    border: solid 2px var(--color-active);
+    transition: 200ms ease-in-out;
+}
+input{
+    width: 100%;
+    outline-color: var(--color-active);
+    padding: 7px;
+    border-radius: 8px;
+    color: #555;
+    font-weight: bold;
+    font-size: 18px;
+    font-family: 'Roboto', sans-serif;
+}
+input[type="radio"]{
+    width: initial;
+    margin-right: 5px;
+}
+input::placeholder{
+    font-size: 16px;
+    font-weight: normal;
+    color: var(--color-dark-header);
+}
+select{
+    padding: 7px;
+    outline-color: var(--color-active);
+    border-radius: 8px;
+    font-size: 16px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+}
+button[type="submit"]{
+    margin-top: 32px;
+    padding: 8px 32px;
+    text-align: center;
+    background-color: var(--color-active);
+    font-size: 16px;
+    font-weight: bold;
+    font-family: 'Roboto', sans-serif;
+    border-radius: 8px;
+    color: rgba(0, 0, 0, 0.7);
+    width: 100%;
+    cursor: pointer;
+}
+button[type="submit"]:hover{
+    border: 1px solid white;
 }
