--- a/codeSCool/desafio4-3/views/teachers/index.njk
+++ b/codeSCool/desafio4-3/views/teachers/index.njk
@@ -25,7 +25,7 @@
         </div>
 
         <div class="item">
-            <div>Class</div>
+            <div>Class Type</div>
             <div>E-Learning</div>
         </div>
 
