--- a/gymManager01/public/styles.css
+++ b/gymManager01/public/styles.css
@@ -13,7 +13,12 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    background-color: #333;
+    /* background-color: #333; */
+    background-image: url(https://images.unsplash.com/photo-1521805103424-d8f8430e8933?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 header {
