--- a/schoolManager/views/layout.njk
+++ b/schoolManager/views/layout.njk
@@ -22,6 +22,10 @@
 
     </header>
 
+    <main>
+        <img src="./assets/book-lover.svg" alt="book-lover">
+    </main>
+
     {% block content %}{% endblock %}
 
 </body>
