--- a/schoolManager/views/layout.njk
+++ b/schoolManager/views/layout.njk
@@ -22,9 +22,9 @@
 
     </header>
 
-    <main>
+    <!--<main>
         <img src="./assets/book-lover.svg" alt="book-lover">
-    </main>
+    </main>-->
 
     {% block content %}{% endblock %}
 
