--- a/schoolManager/public/styles.css
+++ b/schoolManager/public/styles.css
@@ -19,6 +19,11 @@
 body {
   font-family: 'Poppins', sans-serif;
   background-color: var(--color-background-body);
+  background-image: url('assets/book-lover.svg');
+  background-repeat: no-repeat;
+  background-position: center bottom;
+  background-attachment: fixed;
+  background-size: 650px;
 }
 
 header {
@@ -28,12 +33,12 @@ header {
   text-align: center;
 }
 
-main img {
+/* main img {
   height: 55vh;
   width: 100vw;
   margin-top: 160px;
   margin-bottom: 0;
-}
+} */
 
 .links {
   font-size: 22px;
