--- a/gymManager01/public/styles.css
+++ b/gymManager01/public/styles.css
@@ -61,3 +61,11 @@ header {
     width: 100%;   
     transition: width 200ms ease-in-out;
 }
+
+/*=== CARD ===*/
+.card {
+    background-color: white;
+    width: 800px;
+    height: 400px;
+    margin: 45px auto;
+}
