--- a/gymManager01/views/instructors/index.njk
+++ b/gymManager01/views/instructors/index.njk
@@ -2,6 +2,9 @@
 
 {% block content %}
 
-Instrutor
+<div class="card">
+  <section class="avatar"></section>
+  <section class="details"></section>
+</div>
   
 {% endblock content %}
