--- a/gymManager01/public/styles.css
+++ b/gymManager01/public/styles.css
@@ -68,4 +68,18 @@ header {
     width: 800px;
     height: 400px;
     margin: 45px auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    box-shadow: 0px 2px 6px -2px rgba(0, 0, 0, 0.5);
+    animation: up 200ms ease-out;
+}
+
+@keyframes up {
+    from {
+        opacity: 0;
+        transform: translateY(15px);
+    }
+    to {
+        opacity: 1;
+    }
 }
