--- a/gymManager01/views/instructors/index.njk
+++ b/gymManager01/views/instructors/index.njk
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="card">
-  <section class="avatar"></section>
+  <section class="avatar" style="background: url(https://source.unsplash.com/collection/3621148/500x500) no-repeat center center / cover"></section>
   <section class="details"></section>
 </div>
   
