--- a/schoolManager/public/styles.css
+++ b/schoolManager/public/styles.css
@@ -73,3 +73,26 @@ header {
   width: 100%;
   transition: width 200ms ease-in-out;
 }
+
+/*===CARD===*/
+
+.card {
+  background-color: var(--color-light-gray);
+  width: 800px;
+  height: 400px;
+  margin: 45px auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  box-shadow: 0px 2px 6px -2px rgba(0, 0, 0, 0.5);
+  animation: up 400ms ease-out;
+}
+
+@keyframes up {
+  from {
+    opacity: 0;
+    transform: translateY(15px);
+  }
+  to {
+    opacity: 1;
+  }
+}
