--- a/schoolManager/views/teachers/index.njk
+++ b/schoolManager/views/teachers/index.njk
@@ -2,6 +2,9 @@
 
 {% block content %}
 
-Teachers
+<div class="card">
+  <section class="avatar" style="background: url(https://source.unsplash.com/collection/181462/500x500) no-repeat center center / cover"></section>
+  <section class="details"></section>
+</div>
   
 {% endblock content %}
