--- a/gymManager01/views/instructors/index.njk
+++ b/gymManager01/views/instructors/index.njk
@@ -4,7 +4,39 @@
 
 <div class="card">
   <section class="avatar" style="background: url(https://source.unsplash.com/collection/3621148/500x500) no-repeat center center / cover"></section>
-  <section class="details"></section>
+
+  <section class="details">
+    <h3>Detalhes</h3>
+
+    <div class="item">
+      <div>Instrutor</div>
+      <div>Caio Nunes</div>
+    </div>
+
+    <div class="item">
+      <div>Idade</div>
+      <div>37</div>
+    </div>
+
+    <div class="item">
+      <div>Sexo</div>
+      <div>Masculino</div>
+    </div>
+
+    <div class="item">
+      <div>Acompanhamento</div>
+      <div>
+        <span>Musculação</span>
+        <span>Crossfit</span>
+      </div>
+    </div>
+
+    <div class="item">
+      <div>Desde</div>
+      <div>01/01/2019</div>
+    </div>
+
+  </section>
 </div>
   
 {% endblock content %}
