--- a/schoolManager/public/styles.css
+++ b/schoolManager/public/styles.css
@@ -78,8 +78,8 @@ header {
 
 .card {
   background-color: var(--color-light-gray);
-  width: 800px;
-  height: 400px;
+  max-width: 800px;
+  min-height: 400px;
   margin: 45px auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -95,4 +95,51 @@ header {
   to {
     opacity: 1;
   }
+}
+
+/* === DETAILS ===*/
+
+.details {
+  padding: 32px;
+}
+
+.details .item {
+  border-bottom: 1px solid var(--color-light-purple);
+  padding: 16px 0;
+}
+
+.details .item:last-child {
+  border: none;
+}
+
+.details h3 {
+  color: var(--color-dark-purple);
+  letter-spacing: 0.7px;
+  font-size: 20px;
+  text-transform: uppercase;
+}
+
+.details .item div:nth-child(1) {
+  font-size: 14px;
+  line-height: 24px;
+  color: var(--color-dark-purple);
+  letter-spacing: 0.7px;
+  font-weight: 600;
+}
+
+.details .item div:nth-child(2) {
+  color: #555;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.details .item span {
+  padding: 4px 16px;
+  background-color: var(--color-light-purple);
+  color: #202020;
+  border-radius: 16px;
+  margin-right: 4px;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 500;
 }
