--- a/schoolManager/views/teachers/index.njk
+++ b/schoolManager/views/teachers/index.njk
@@ -4,7 +4,39 @@
 
 <div class="card">
   <section class="avatar" style="background: url(https://source.unsplash.com/collection/181462/500x500) no-repeat center center / cover"></section>
-  <section class="details"></section>
+  <section class="details">
+
+    <h3>Detalhes</h3>
+
+    <div class="item">
+      <div>Professor</div>
+      <div>Carlos Madeo</div>
+    </div>
+
+    <div class="item">
+      <div>Idade</div>
+      <div>29</div>
+    </div>
+
+    <div class="item">
+      <div>Sexo</div>
+      <div>Masculino</div>
+    </div>
+
+    <div class="item">
+      <div>Acompanhamento</div>
+      <div>
+        <span>Javascript</span>
+        <span>React</span>
+      </div>
+    </div>
+
+    <div class="item">
+      <div>Desde</div>
+      <div>01/01/2019</div>
+    </div>
+
+  </section>
 </div>
   
 {% endblock content %}
