--- a/gymManager01/public/styles.css
+++ b/gymManager01/public/styles.css
@@ -131,3 +131,35 @@ header {
     font-size: 16px;
     font-weight: 500;
 }
+
+/* === FORM === */
+
+input {
+ width: 100%;
+ outline: none;
+ color: #555;
+ font-weight: 600;
+ font-size: 18px;
+}
+
+input[type="radio"] {
+    width: initial;
+    margin-right: 6px;
+}
+
+input::placeholder {
+    font-size: 16px;
+    font-weight: normal;
+}
+
+button[type="submit"] {
+    padding: 8px 32px;
+    background-color: var(--primary-color);
+    border-radius: 4px;
+    margin-top: 32px;
+    width: 100%;
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    color: #202020;
+}
