--- a/schoolManager/views/teachers/index.njk
+++ b/schoolManager/views/teachers/index.njk
@@ -19,8 +19,13 @@
     </div>
 
     <div class="item">
-      <div>Sexo</div>
-      <div>Masculino</div>
+      <div>Nível Educação</div>
+      <div>Mestrado</div>
+    </div>
+
+    <div class="item">
+      <div>Tipo de Aula</div>
+      <div>À distânica</div>
     </div>
 
     <div class="item">
