year/birth-date

--- a/gymManager01/views/instructors/index.njk
+++ b/gymManager01/views/instructors/index.njk
@@ -9,7 +9,7 @@
     <h3>Detalhes</h3>
 
     <div class="item">
-      <div>Instrutor</div>
+      <div>Instrutor (a)</div>
       <div>Caio Nunes</div>
     </div>
 
