--- a/gymManager01/views/instructors/show.njk
+++ b/gymManager01/views/instructors/show.njk
@@ -39,6 +39,8 @@
       <div>{{ instructor.created_at }}</div>
     </div>
 
+    <a href="/instructors/{{ instructor.id }}/edit" class="button">Editar</a>
+
   </section>
 </div>
   
