--- a/schoolManager/views/teachers/show.njk
+++ b/schoolManager/views/teachers/show.njk
@@ -3,42 +3,43 @@
 {% block content %}
 
 <div class="card">
-  <section class="avatar" style="background: url(https://source.unsplash.com/collection/181462/500x500) no-repeat center center / cover"></section>
+  <section class="avatar" style="background: url({{ teacher.avatar_url }}) no-repeat center center / cover"></section>
   <section class="details">
 
     <h3>Detalhes</h3>
 
     <div class="item">
       <div>Professor(a)</div>
-      <div>Carlos Madeo</div>
+      <div>{{ teacher.name }}</div>
     </div>
 
     <div class="item">
       <div>Idade</div>
-      <div>29</div>
+      <div>{{ teacher.age }}</div>
     </div>
 
     <div class="item">
       <div>Nível Educação</div>
-      <div>Mestrado</div>
+      <div>{{ teacher.nivel_educacao }}</div>
     </div>
 
     <div class="item">
       <div>Tipo de Aula</div>
-      <div>À distânica</div>
+      <div>{{ "Presencial" if teacher.tipo_aula == "presencial" else "À distância" }}</div>
     </div>
 
     <div class="item">
       <div>Matérias</div>
       <div>
-        <span>Javascript</span>
-        <span>React</span>
+        {% for materia in teacher.materia %}          
+          <span>{{ materia }}</span>
+        {% endfor %}
       </div>
     </div>
 
     <div class="item">
       <div>Desde</div>
-      <div>01/01/2019</div>
+      <div>{{ teacher.created_at }}</div>
     </div>
 
   </section>
