--- a/schoolManager/views/teachers/show.njk
+++ b/schoolManager/views/teachers/show.njk
@@ -42,6 +42,8 @@
       <div>{{ teacher.created_at }}</div>
     </div>
 
+    <a href="/teachers/{{ teacher.id }}/edit" class="button">Editar</a>
+
   </section>
 </div>
   
