--- a/schoolManager/public/styles.css
+++ b/schoolManager/public/styles.css
@@ -174,7 +174,8 @@ select {
   font-size: 16px;
 }
 
-button[type="submit"] {
+button[type="submit"],
+a.button {
   padding: 8px 32px;
   background-color: var(--color-dark-purple);
   font-family: 'Poppins', sans-serif;
@@ -186,4 +187,15 @@ button[type="submit"] {
   outline: none;
   border: none;
   cursor: pointer;
+}
+
+a.button {
+  display: block;
+  text-align: center;
+  text-decoration: none;
+}
+
+#form-delete button[type="submit"] {
+  margin-top: 8px;
+  background-color: #df2929;
 }
