--- a/gymManager01/views/instructors/index.njk
+++ b/gymManager01/views/instructors/index.njk
@@ -2,41 +2,32 @@
 
 {% block content %}
 
-<div class="card">
-  <section class="avatar" style="background: url(https://source.unsplash.com/collection/3621148/500x500) no-repeat center center / cover"></section>
+<div class="card table-container">
+  <table width="100%">
+    <thead>
+      <tr>
+        <th>Instrutor(a)</th>
+        <th>Atendimento</th>
+        <th>Ação</th>
+      </tr>
+      <tbody>
 
-  <section class="details">
-    <h3>Detalhes</h3>
+        {% for instructor in instructors %}
 
-    <div class="item">
-      <div>Instrutor (a)</div>
-      <div>Caio Nunes</div>
-    </div>
+          <tr>
+            <td>
+              <span style="background-image: url({{instructor.avatar_url}})"></span>
+              {{instructor.name}}
+            </td>
+            <td>{{instructor.services}}</td>
+            <td><a href="/instructors/{{instructor.id}}">Ver</a></td>
+          </tr>
+          
+        {% endfor %}
 
-    <div class="item">
-      <div>Idade</div>
-      <div>37</div>
-    </div>
-
-    <div class="item">
-      <div>Sexo</div>
-      <div>Masculino</div>
-    </div>
-
-    <div class="item">
-      <div>Acompanhamento</div>
-      <div>
-        <span>Musculação</span>
-        <span>Crossfit</span>
-      </div>
-    </div>
-
-    <div class="item">
-      <div>Desde</div>
-      <div>01/01/2019</div>
-    </div>
-
-  </section>
+      </tbody>
+    </thead>
+  </table>
 </div>
   
 {% endblock content %}
