--- a/schoolManager/public/styles.css
+++ b/schoolManager/public/styles.css
@@ -199,3 +199,74 @@ a.button {
   margin-top: 8px;
   background-color: #df2929;
 }
+
+.button-side {
+  display: flex;
+}
+
+#red {
+  background-color: #df2929;
+  margin-left: 10px;
+}
+
+/*=== INDEX TEACHERS ===*/
+.table-container {
+  display: block;
+  padding: 40px;
+}
+
+.table-container table {
+  border-spacing: 0;
+}
+
+.table-container thead tr th {
+  text-align: left;
+}
+
+td, th {
+  padding: 16px;
+  border-bottom: 1px solid var(--color-light-purple);
+}
+
+th {
+  text-transform: uppercase;
+  font-size: 12px;
+  color: #777;
+}
+
+tbody tr:last-child td {
+  border-bottom: none;
+}
+
+tbody tr td:first-child {
+  display: grid;
+  grid-template-columns: 64px 1fr;
+  align-items: center;
+}
+
+tbody tr td:first-child span {
+  width: 40px;
+  height: 40px;
+  background-position: center;
+  background-size: cover;
+  border-radius: 50%;
+  box-shadow:  3px 1px 6px -4px black;
+  border: 0.5px solid var(--color-dark-purple);
+}
+
+tbody tr td:last-child a {
+  background-color: var(--color-dark-purple);
+  padding: 8px 16px;
+  color: whitesmoke;
+  text-decoration: none;
+  letter-spacing: 1px;
+  border-radius: 6px;
+  font-size: 12px;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.table-container thead tr th:last-child,
+td:last-child {
+  text-align: center;
+}
