--- a/schoolManager/views/teachers/index.njk
+++ b/schoolManager/views/teachers/index.njk
@@ -2,46 +2,28 @@
 
 {% block content %}
 
-<div class="card">
-  <section class="avatar" style="background: url(https://source.unsplash.com/collection/181462/500x500) no-repeat center center / cover"></section>
-  <section class="details">
-
-    <h3>Detalhes</h3>
-
-    <div class="item">
-      <div>Professor(a)</div>
-      <div>Carlos Madeo</div>
-    </div>
-
-    <div class="item">
-      <div>Idade</div>
-      <div>29</div>
-    </div>
-
-    <div class="item">
-      <div>Nível Educação</div>
-      <div>Mestrado</div>
-    </div>
-
-    <div class="item">
-      <div>Tipo de Aula</div>
-      <div>À distânica</div>
-    </div>
-
-    <div class="item">
-      <div>Matérias</div>
-      <div>
-        <span>Javascript</span>
-        <span>React</span>
-      </div>
-    </div>
-
-    <div class="item">
-      <div>Desde</div>
-      <div>01/01/2019</div>
-    </div>
-
-  </section>
+<div class="card table-container">
+  <table width="100%">
+    <thead>
+      <tr>
+        <th>Professor(a)</th>
+        <th>Atendimento</th>
+        <th>Ação</th>
+      </tr>
+      <tbody>
+        {% for teacher in teachers %}          
+          <tr>
+            <td>
+              <span style="background-image: url({{teacher.avatar_url}})"></span>
+              {{teacher.name}}
+            </td>
+            <td>{{teacher.materia}}</td>
+            <td><a href="/teachers/{{teacher.id}}">Ver</a></td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </thead>
+  </table>
 </div>
   
 {% endblock content %}
