--- a/gymManager01/views/instructors/edit.njk
+++ b/gymManager01/views/instructors/edit.njk
@@ -4,7 +4,7 @@
 
   <div class="card">
 
-    <section class="avatar" style="background: url(https://source.unsplash.com/collection/3621148/500x500) no-repeat center center / cover"></section>
+    <section class="avatar" style="background: url({{instructor.avatar_url}}) no-repeat center center / cover"></section>
 
     <section class="details">
 
