--- a/gymManager01/views/layout.njk
+++ b/gymManager01/views/layout.njk
@@ -16,13 +16,15 @@
     <header>
 
         <div class="links">        
-            <a href="/" class="active">Instrutores</a>
+            <a href="/instructors">Instrutores</a>
             <a href="/members">Membros</a>
         </div>
 
     </header>
 
     {% block content %}{% endblock %}
+
+    <script src="/scripts.js"></script>
 
 </body>
 </html>
