--- a/gymManager01/public/styles.css
+++ b/gymManager01/public/styles.css
@@ -88,11 +88,13 @@ header {
 
 .details {
     padding: 32px;
+    background-color: #202020;
+    color: #bebdbd;
     /* display: flex; */
 }
 
 .details .item {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    border-bottom: 1px solid #3b3a3a;
     padding: 16px 0;
 }
 
@@ -116,7 +118,7 @@ header {
 }
 
 .details .item div:nth-child(2) {
-    color: #555;
+    color:  #bebdbd;
     font-size: 18px;
     font-weight: bold;
 }
@@ -138,9 +140,12 @@ header {
 input {
  width: 100%;
  outline: none;
- color: #555;
- font-weight: 600;
+ color: #bebdbd;
+ font-weight: 500;
  font-size: 18px;
+ background-color: #3b3a3a;
+ padding: 6px;
+ border-radius: 6px;
 }
 
 input[type="radio"] {
@@ -151,6 +156,8 @@ input[type="radio"] {
 input::placeholder {
     font-size: 16px;
     font-weight: normal;
+    color: #bebdbd;
+    font-family: 'Poppins', sans-serif;
 }
 
 button[type="submit"],
@@ -188,9 +195,9 @@ a.button {
 
 #red {
     background-color: #f71212;
-    color: white;
-    font-weight: 400;
-    letter-spacing: 1px; 
+    color: #202020;
+    font-weight: 600;
+    letter-spacing: 1px;
     margin-left: 10px;
     cursor: pointer;
 }
@@ -199,6 +206,8 @@ a.button {
 .table-container {
     display: block;
     padding: 40px;
+    background-color: #202020;
+    color: #bebdbd;
 }
 
 .table-container table {
@@ -217,7 +226,7 @@ th {
 
 td, th {
     padding: 16px;
-    border-bottom: 1px solid #d9d9d9;
+    border-bottom: 1px solid #3b3a3a;
 }
 
 tbody tr:last-child td{
@@ -240,16 +249,22 @@ tbody tr td:first-child span {
     border: 0.5px solid var(--primary-color);
 }
 
-tbody tr td:last-child a {
+tbody tr td:last-child a,
+.table-container > a {
     background-color: var(--primary-color);
     padding: 6px 16px;
     border-radius: 4px;
     font-size: 12px;
     text-decoration: none;
-    font-weight: 500;
+    font-weight: 600;
     letter-spacing: 1px;
-    color: whitesmoke;
+    color: #202020;
     text-transform: uppercase;
+}
+
+.table-container > a {
+    margin-bottom: 12px;
+    display: inline-block;
 }
 
 .table-container thead tr th:last-child,
