--- a/gymManager01/views/members/index.njk
+++ b/gymManager01/views/members/index.njk
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="card table-container">
-  <a href="/instructors/create">Novo</a>
+  <a href="/members/create">Novo</a>
   <table width="100%">
     <thead>
       <tr>
