--- a/gymManager01/views/members/create.njk
+++ b/gymManager01/views/members/create.njk
@@ -2,13 +2,13 @@
 
 {% block content %}
 
-<form class="card" method="POST" action="/instructors">
-  <section class="avatar" style="background: url(https://source.unsplash.com/collection/3621148/500x500) no-repeat center center / cover"></section>
+<form class="card" method="POST" action="/members">
+  <section class="avatar" style="background: url(https://images.unsplash.com/photo-1547919307-1ecb10702e6f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60) no-repeat center center / cover"></section>
 
   <section class="details">
-    <h3>Novo(a) Instrutor(a)</h3>
+    <h3>Novo Membro</h3>
 
-    {% include "instructors/fields.njk" %}
+    {% include "members/fields.njk" %}
 
     <button type="submit">Salvar</button>
 
