--- a/gymManager01/public/styles.css
+++ b/gymManager01/public/styles.css
@@ -119,8 +119,8 @@ header {
 
 .details .item div:nth-child(2) {
     color:  #bebdbd;
-    font-size: 18px;
-    font-weight: bold;
+    font-size: 16px;
+    font-weight: 400;
 }
 
 .details .item span {
@@ -137,7 +137,7 @@ header {
 
 /* === FORM === */
 
-input {
+input, select {
  width: 100%;
  outline: none;
  color: #bebdbd;
