--- a/gymManager01/views/members/edit.njk
+++ b/gymManager01/views/members/edit.njk
@@ -4,33 +4,39 @@
 
   <div class="card">
 
-    <section class="avatar" style="background: url({{instructor.avatar_url}}) no-repeat center center / cover"></section>
+    <section class="avatar" style="background: url({{member.avatar_url}}) no-repeat center center / cover"></section>
 
     <section class="details">
 
-      <form method="POST" action="/instructors?_method=PUT">
-        
-        <h3>Editar Instrutor(a)</h3>
+      <form method="POST" action="/members?_method=PUT">
 
-        {% include "instructors/fields.njk" %}
+        <h3>Editar Membro</h3>
 
-          <input 
+        {% include "members/fields.njk" %}
+
+        <input 
             type="hidden" 
             name="id" 
-            value={{instructor.id}}
+            value={{member.id}}
           >
-          <div class="button-side">
-            <button type="submit">Salvar</button>          
-            <button type="submit" form="form-delete" id="red">Deletar</button>
-          </div>
+        <div class="button-side">
+          <button type="submit">Salvar</button>
+          <button type="submit" form="form-delete" id="red" class="delete" data-confirm="Deseja deletar?">Deletar</button>
+        </div>
       </form>
 
-      <form id="form-delete" action="/instructors?_method=DELETE" method="POST">
-        <input type="hidden" name="id" value={{instructor.id}}>       
+      <form id="form-delete" action="/members?_method=DELETE" method="POST">
+        <input 
+          type="hidden" 
+          name="id" 
+          value={{member.id}}
+          >
       </form>
 
-    </section>   
+      {% include "../confirm.njk" %}
 
-  </div>
+    </section>
+
+  </div>  
 
 {% endblock content %}
