--- a/gymManager01/views/members/index.njk
+++ b/gymManager01/views/members/index.njk
@@ -7,21 +7,25 @@
   <table width="100%">
     <thead>
       <tr>
-        <th>Instrutor(a)</th>
-        <th>Atendimento</th>
+        <th>Membro</th>
+        <th>Email</th>
+        <th>Peso</th>
+        <th>Altura</th>
         <th>Ação</th>
       </tr>
       <tbody>
 
-        {% for instructor in instructors %}
+        {% for member in members %}
 
           <tr>
             <td>
-              <span style="background-image: url({{instructor.avatar_url}})"></span>
-              {{instructor.name}}
+              <span style="background-image: url({{member.avatar_url}})"></span>
+              {{member.name}}
             </td>
-            <td>{{instructor.services}}</td>
-            <td><a href="/instructors/{{instructor.id}}">Ver</a></td>
+            <td>{{member.email}}</td>
+            <td>{{member.weight}} kg</td>
+            <td>{{member.height}} cm</td>
+            <td><a href="/members/{{member.id}}">Ver</a></td>
           </tr>
           
         {% endfor %}
