--- a/schoolManager/views/layout.njk
+++ b/schoolManager/views/layout.njk
@@ -16,7 +16,7 @@
     <header>
 
         <div class="links">        
-            <a href="/" class="active">Professores</a>
+            <a href="/teachers">Professores</a>
             <a href="/students">Estudantes</a>
         </div>
 
@@ -27,6 +27,8 @@
     </main>-->
 
     {% block content %}{% endblock %}
+
+    <script src="/scripts.js"></script>
 
 </body>
 </html>
