--- a/schoolManager/views/students/index.njk
+++ b/schoolManager/views/students/index.njk
@@ -3,11 +3,11 @@
 {% block content %}
 
 <div class="card table-container">
-  <a href="/teachers/create">Novo</a>
   <table width="100%">
+    <a href="/students/create">Novo</a>
     <thead>
       <tr>
-        <th>Professor(a)</th>
+        <th>Estudante</th>
         <th>Atendimento</th>
         <th>Ação</th>
       </tr>
