--- a/schoolManager/public/styles.css
+++ b/schoolManager/public/styles.css
@@ -77,7 +77,7 @@ header {
 /*===CARD===*/
 
 .card {
-  background-color: var(--color-light-gray);
+  background-color: rgba(211, 212, 217, 0.87);
   max-width: 800px;
   min-height: 400px;
   margin: 45px auto;
@@ -231,7 +231,7 @@ td, th {
 th {
   text-transform: uppercase;
   font-size: 12px;
-  color: #777;
+  color: var(--color-dark-purple);
 }
 
 tbody tr:last-child td {
@@ -254,7 +254,8 @@ tbody tr td:first-child span {
   border: 0.5px solid var(--color-dark-purple);
 }
 
-tbody tr td:last-child a {
+tbody tr td:last-child a,
+.table-container > a {
   background-color: var(--color-dark-purple);
   padding: 8px 16px;
   color: whitesmoke;
@@ -264,6 +265,11 @@ tbody tr td:last-child a {
   font-size: 12px;
   font-weight: 500;
   text-transform: uppercase;
+}
+
+.table-container > a {
+  margin-bottom: 16px;
+  display: inline-block;
 }
 
 .table-container thead tr th:last-child,
