--- a/schoolManager/views/students/index.njk
+++ b/schoolManager/views/students/index.njk
@@ -8,18 +8,20 @@
     <thead>
       <tr>
         <th>Estudante</th>
-        <th>Atendimento</th>
+        <th>Email</th>
+        <th>Escolaridade</th>
         <th>Ação</th>
       </tr>
       <tbody>
-        {% for teacher in teachers %}          
+        {% for student in students %}          
           <tr>
             <td>
-              <span style="background-image: url({{teacher.avatar_url}})"></span>
-              {{teacher.name}}
+              <span style="background-image: url({{student.avatar_url}})"></span>
+              {{student.name}}
             </td>
-            <td>{{teacher.materia}}</td>
-            <td><a href="/teachers/{{teacher.id}}">Ver</a></td>
+            <td>{{student.email}}</td>
+            <td>{{student.ano_escolar}}</td>
+            <td><a href="/students/{{student.id}}">Ver</a></td>
           </tr>
         {% endfor %}
       </tbody>
