--- a/schoolManager/views/students/show.njk
+++ b/schoolManager/views/students/show.njk
@@ -24,6 +24,11 @@
     </div>
 
     <div class="item">
+      <div>Aniversário</div>
+      <div>{{ student.birth }}</div>
+    </div>
+
+    <div class="item">
       <div>Escolaridade</div>
       <div>{{ student.ano_escolar }}</div>
     </div>
