--- a/schoolManager/views/students/edit.njk
+++ b/schoolManager/views/students/edit.njk
@@ -4,20 +4,20 @@
 
   <div class="card">
 
-    <section class="avatar" style="background: url({{teacher.avatar_url}}) no-repeat center center / cover">
+    <section class="avatar" style="background: url({{student.avatar_url}}) no-repeat center center / cover">
     </section>
 
     <section class="details">
 
-      <form method="POST" action="/teachers?_method=PUT">
-         <h3>Editar Professor(a)</h3>
+      <form method="POST" action="/students?_method=PUT">
+         <h3>Editar Estudante</h3>
 
-          {% include "teachers/fields.njk" %}
+          {% include "students/fields.njk" %}
 
           <input 
             type="hidden" 
             name="id" 
-            value={{teacher.id}}
+            value={{student.id}}
           >
 
           <div class="button-side">
@@ -26,13 +26,15 @@
           </div>
       </form>
 
-      <form id="form-delete" action="/teachers?_method=DELETE" method="post">
+      <form id="form-delete" action="/students?_method=DELETE" method="post">
         <input 
           type="hidden" 
           name="id" 
-          value={{teacher.id}}
+          value={{student.id}}
         >
       </form>
+
+      {% include "../confirm.njk" %}
 
     </section>
     
