--- a/Foodfy/admin_foodfy/views/recipe-detail.njk
+++ b/Foodfy/admin_foodfy/views/recipe-detail.njk
@@ -1,7 +1,7 @@
 {% extends "layout.njk" %}
 
 {% block content %}
-    <article class="recipes_content">
+    <article class="recipes_content_detail">
         <div class="recipe-image">
             <img src="{{item.image}}" alt="{{item.title}}">
         </div>
