--- a/Foodfy/admin_foodfy/views/layout.njk
+++ b/Foodfy/admin_foodfy/views/layout.njk
@@ -14,7 +14,7 @@
     <header>
         <div class="logo">
             <a href="/">
-                <img src="/logo.png" alt="Logo">
+                <img src="/logo-foodfy.png" alt="Logo">
             </a>
         </div>
         <nav class="links">
