--- a/Foodfy/admin_foodfy/views/recipes.njk
+++ b/Foodfy/admin_foodfy/views/recipes.njk
@@ -7,7 +7,7 @@
 {% block content %}
 
     <main class="recipes_content">
-        <div class="most_accessed_content">
+        <div class="accessed_content">
             {% for item in items %}
                 <div class="quick_recipes" id="{{item.id}}">
                     <img src="{{item.image}}" alt="{{item.title}}" class="image_recipes">
