--- a/Foodfy/admin_foodfy/public/styles.css
+++ b/Foodfy/admin_foodfy/public/styles.css
@@ -3,7 +3,7 @@
 :root{
     --color-pink: #6e3e1c;
     --color-black: #111111;
-    --color-bg-banner: #c9c7c7;
+    --color-bg-banner: #e6e6e6;
     --color-grey-title: #a1a1a1;
     --color-grey: #777777;
     --color-middle-grey: #2c2c2c;
