--- a/Foodfy/admin_foodfy/public/styles.css
+++ b/Foodfy/admin_foodfy/public/styles.css
@@ -228,3 +228,15 @@ footer p{
 .recipe_showhide.active{
     display: none;
 }
+
+/*===NOT-FOUND===*/
+.not-found {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    margin-top: 100px;
+}
+
+.not-found img {
+    height: 450px;
+}
