foodfy-admin-update

--- a/Foodfy/foodfy-admin/views/index.njk
+++ b/Foodfy/foodfy-admin/views/index.njk
@@ -9,7 +9,7 @@
                 <p class="banner_subtitle">Aprenda a construir os melhores pratos <br> com receitas criadas por profissionais  <br> do mundo inteiro.</p>
             </div>
             <div class="banner_img">
-                <img src="chef-cinza-escuro.png" alt="Chef">
+                <img src="assets/chef-cinza-escuro.png" alt="Chef">
             </div>
         </div>
     </section>
