--- a/Foodfy/foodfy-admin/views/not-found.njk
+++ b/Foodfy/foodfy-admin/views/not-found.njk
@@ -3,7 +3,7 @@
 {% block content %}
 
   <div class="not-found">
-    <img src="not-found.png" alt="not-found">
+    <img src="assets/not-found.png" alt="not-found">
   </div>
   
 {% endblock %}
