--- a/Foodfy/foodfy-admin/public/styles.css
+++ b/Foodfy/foodfy-admin/public/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 :root{
     --color-pink: #6e3e1c;
@@ -13,7 +13,6 @@
     margin: 0;
     padding: 0;
     border: 0;
-    box-sizing: border-box;
 }
 body{
     background-color: #272727;
@@ -155,6 +154,9 @@ footer p{
 }
 
 /*===RECIPES DETAILS===*/
+.recipes_content{
+    margin-top: 86px;
+}
 .recipes_content_detail{
     width: 940px;
     margin: 0 auto;
@@ -222,11 +224,20 @@ footer p{
     border-radius: 18px;
 
 }
-.recipe_showhide{
-    display: block;
+.recipe_showhide.active {
+    overflow: visible;
+    opacity: 100%;
+    height: 100%;
+    max-height: 600px;
+    transition: max-height 400ms ease-in, height 400ms ease-in, opacity 400ms ease-in;
 }
-.recipe_showhide.active{
-    display: none;
+.recipe_showhide {
+    padding: 14px 0;
+    overflow: hidden;
+    opacity: 0;
+    height: 0;
+    max-height: 0px;
+    transition: max-height 400ms ease-in, height 400ms ease-in, opacity 400ms ease-in;
 }
 
 /*===NOT-FOUND===*/
