--- a/Foodfy/foodfy-admin/views/recipe-detail.njk
+++ b/Foodfy/foodfy-admin/views/recipe-detail.njk
@@ -1,7 +1,7 @@
 {% extends "layout.njk" %}
 
 {% block content %}
-    <article class="recipes_content_detail">
+    <article class="recipes_content">
         <div class="recipe-image">
             <img src="{{item.image}}" alt="{{item.title}}">
         </div>
@@ -10,7 +10,7 @@
         <div class="recipe-procedure">
             <div class="wrapper">
                 <h2>Ingredientes</h2>
-                <a class="showhide_btn">Esconder</a>
+                <a class="showhide_btn">Mostrar</a>
             </div>
             <ul class="recipe_showhide">
                 {% for ingredient in item.ingredients %}
@@ -19,7 +19,7 @@
             </ul>
             <div class="wrapper">
                 <h2>Modo de preparo</h2>
-                <a class="showhide_btn">Esconder</a>
+                <a class="showhide_btn">Mostrar</a>
             </div>
             <ul class="recipe_showhide">
                 {% for prepare in item.preparation %}
@@ -28,7 +28,7 @@
             </ul>
             <div class="wrapper">
                 <h2>Informações adicionais</h2>
-                <a class="showhide_btn">Esconder</a>
+                <a class="showhide_btn">Mostrar</a>
             </div>
             <p class="recipe_showhide">{{item.information}}</p>
         </div>
